# Thesis

ClientApp/: Assembly-CSharp.csproj
ClientApp/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
RaspiCamTest/: CMakeLists.txt
RaspiCamTest.1/: script
RaspiCamTest.1/src/: main.cpp
RaspiCamTest/src/: main.cpp
RaspiCamtest/: script
RaspiCamtest/src/: main.cpp
UARTTest/: CMakeLists.txt  script
UARTTest/src/: main.cpp
bpsApplication/: Assembly-CSharp.Player.csproj  Assembly-CSharp.csproj  bpsApplication.csproj  bpsApplication.sln  user.keystore
bpsApplication/Assets/: WSATestCertificate.pfx
opencv2/: cvconfig.h  opencv_modules.hpp
raspberrypi3b/: CMakeLists.txt  script
raspberrypi3b/hpp/: bpsDefine.hpp  bpsKalmanFilter.hpp  bpsServer.hpp  bpsUART.hpp  bpsUARTData.hpp
raspberrypi3b/src/: bpsKalmanFilter.cpp  bpsServer.cpp  bpsUART.cpp  bpsUARTData.cpp  main.cpp
server/: CMakeLists.txt  client  client.c  script
server/hpp/: bpsServer.hpp  bpsUARTData.hpp
server/src/: bpsServer.cpp  main.cpp
stm32f411vet6/: .mxproject  Thesis.ioc
stm32f411vet6/Inc/: bpsDefine.h  bpsFunctions.h  bpsTasks.h  stm32f4xx_it.h
stm32f411vet6/MDK-ARM/: Thesis.uvguix.shawr  Thesis.uvguix.shawry  Thesis.uvoptx  Thesis.uvprojx  startup_stm32f411xe.lst
stm32f411vet6/Src/: bpsFunctions.c  bpsTasks.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
test/: script
test/src/: main.cpp
testRaspiCam/: CMakeLists.txt  script
testUART/: CMakeLists.txt  script
testUART/hpp/: bpsUARTData.hpp
testUART/src/: bpsUARTData.cpp  main.cpp
(+86 files in other folders)
